--- a/assets/shayri.html
+++ b/assets/shayri.html
@@ -8,7 +8,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap" rel="stylesheet">
     <style>
+        *{
+            font-family: "Playwrite CU", cursive;
+            font-optical-sizing: auto;
+            font-weight: 24px;
+            font-style: normal;
+        }
         .main-content{
             margin: 0px;
             display: flex;
